tests/sqlite/ui-common/section_param_unused_in_section_sql.stderr
error: sql_forge!: parameter :id is unused in the SQL template
  --> tests/sqlite/tmp-ui/section_param_unused_in_section_sql.rs:12:20
   |
12 |                 ( :id = 1i64 ),
   |                    ^^
